<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.newu.spanishnumbers.MainActivity">

    <GridLayout
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/ten"
            android:layout_width="60dp"
            android:layout_height="75dp"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_row="4"
            android:layout_rowWeight="2"
            android:background="@drawable/four"
            android:onClick="musicPlay"
            android:text="@string/ten"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="404dp"
            tools:text="@string/ten" />

        <Button
            android:id="@+id/one"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:layout_row="0"
            android:layout_rowWeight="2"
            android:background="@drawable/one"
            android:onClick="musicPlay"
            android:text="@string/one"
            tools:text="@string/one" />

        <Button
            android:id="@+id/two"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_row="0"
            android:layout_rowWeight="2"
            android:onClick="musicPlay"
            android:background="@drawable/two"
            android:text="@string/two"
            tools:text="@string/two" />

        <Button
            android:id="@+id/three"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:layout_row="1"
            android:layout_rowWeight="2"
            android:onClick="musicPlay"
            android:background="@drawable/three"
            android:text="@string/three"
            tools:text="@string/three" />

        <Button
            android:id="@+id/four"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_row="1"
            android:layout_rowWeight="2"
            android:onClick="musicPlay"
            android:background="@drawable/four"
            android:text="@string/four"
            tools:text="@string/four" />

        <Button
            android:id="@+id/five"
            android:layout_width="60dp"
            android:layout_height="75dp"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:layout_row="2"
            android:layout_rowWeight="2"
            android:onClick="musicPlay"
            android:background="@drawable/five"
            android:text="@string/five"
            tools:text="@string/five" />

        <Button
            android:id="@+id/six"
            android:layout_width="60dp"
            android:layout_height="75dp"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_row="2"
            android:layout_rowWeight="2"
            android:onClick="musicPlay"
            android:background="@drawable/six"
            android:text="@string/six"
            tools:text="@string/six" />

        <Button
            android:id="@+id/seven"
            android:layout_width="60dp"
            android:layout_height="75dp"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:layout_row="3"
            android:layout_rowWeight="2"
            android:onClick="musicPlay"
            android:background="@drawable/one"
            android:text="@string/seven"
            tools:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            android:layout_width="60dp"
            android:layout_height="75dp"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_row="3"
            android:layout_rowWeight="2"
            android:onClick="musicPlay"
            android:background="@drawable/two"
            android:text="@string/eight"
            tools:text="@string/eight" />

        <Button
            android:id="@+id/nine"
            android:layout_width="60dp"
            android:layout_height="75dp"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:layout_row="4"
            android:layout_rowWeight="2"
            android:onClick="musicPlay"
            android:background="@drawable/three"
            android:text="@string/nine"
            tools:text="@string/nine" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
